--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<div class="title-container" (click)="playAudio()">
-  <p class="title">{{title}}</p>
+<app-header></app-header>
+<app-menu></app-menu>
+
+<div class="main">
+  <youtube-player class="youtube" [height]="500" [width]="800" videoId="b09LTW1EhyQ"></youtube-player>
 </div>
+
+<router-outlet></router-outlet>
