--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,7 +6,7 @@
           <img src="assets/images/youtube.png">
         </a>
         <a href="https://www.instagram.com/worst_wishes_official" class="social-link">
-          <img src="assets/images/inst.png">
+          <img class="inst" src="assets/images/inst.png">
         </a>
       </div>
       <div class="img-container">
