--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,10 +1,10 @@
 $basic-blue: #9198e5;
 $basic-red: #ff4444;
-$basic-yellow: #e5e599;
+$basic-yellow: #f0ebde;
 
 .header-container {
   box-shadow: black 0 10px 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 
   .header {
     .logo-container {
@@ -31,9 +31,15 @@ $basic-yellow: #e5e599;
         top: 10px;
         right: 10px;
 
-        .social-link img{
+        .social-link img {
           height: 40px;
           width: 40px;
+
+          &.inst {
+            height: 30px;
+            width: 29px;
+            margin-bottom: 5px;
+          }
 
           &:hover {
             /* Start the shake animation and make the animation last for 0.5 seconds */
@@ -57,12 +63,13 @@ $basic-yellow: #e5e599;
     .navbar-container {
       display: flex;
       justify-content: space-between;
-      background: linear-gradient(#000000, $basic-red);
+      background: linear-gradient(#000000, gray);
       padding: 40px 10px 10px 0;
 
       .navbar-text {
         padding-left: 30px;
         padding-top: 15px;
+        cursor: default;
 
         span {
           font-size: 30px;
@@ -84,22 +91,23 @@ $basic-yellow: #e5e599;
           min-width: 100px;
           max-height: 18px;
           padding: 8px 10px 6px 10px;
-          background: linear-gradient(gray 0%, lightgray 25%);
+          background: black;
           border-radius: 10px;
           border: 2px solid transparent;
-          color: #333333;
+          color: #dddddd;
           font-size: 15px;
           text-align: center;
           cursor: pointer;
           transition: 1s;
 
           &:hover {
-            background: linear-gradient(gray 0%, lightgray 75%);
-            border: 2px solid $basic-yellow;
+            background: #111111;
+            box-shadow: #222222 0 5px 8px;
           }
-          &:active {
-            background: linear-gradient(#555555, #ffffff);
-            border: 2px solid $basic-yellow;
+          &:active, &:focus {
+            background: #333333;
+            color: #ffffff;
+            outline: 0;
           }
         }
       }
